# xlayers

./: .bazelrc  .editorconfig  .eslintrc.json  .firebaserc  .gitignore  .release-it.json  BUILD.bazel  CHANGELOG.md  CODE_OF_CONDUCT.md  CODING_STANDARDS.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PRIVACY.md  README.md  RELEASE.md  SECURITY.md  WORKSPACE  angular.json  cloudbuild.yaml  cypress.json  decorate-angular-cli.js  firebase.json  jest.config.js  jest.preset.js  junit.xml  local-build.sh  ngsw-config.json  now.json  nx.json  package-lock.json  package.json  tsconfig.base.json  tsconfig.json  tsconfig.post.json  tslint.json
e2e/: BUILD.bazel  protractor.on-prepare.js
e2e/src/: app.e2e-spec.ts
src/: BUILD.bazel  index.html  karma.conf.js  main.ts  manifest.json  polyfills.ts  require.config.js  sketch.typings.ts  styles.css  tsconfig.app.json  tsconfig.spec.json  tslint.json  typing.d.ts
src/@types/sketchapp/: index.d.ts
src/app/: BUILD.bazel  app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  editor-guard.service.ts
src/app/core/: BUILD.bazel  core.module.spec.ts  core.module.ts  preview-badge.service.ts  sketch.service.mock.ts  sketch.service.spec.ts  sketch.service.ts
src/app/core/state/: index.ts  page.state.ts  ui.state.ts
src/app/editor/: BUILD.bazel  editor.component.css  editor.component.html  editor.component.spec.ts  editor.component.ts  editor.module.spec.ts  editor.module.ts  preview-badge.service.spec.ts  source-code.service.spec.ts  source-code.service.ts
src/app/editor/code/: code.component.html  code.component.spec.ts  code.component.ts  code.module.ts
src/app/editor/code-editor/: BUILD.bazel  code-editor.module.spec.ts  code-editor.module.ts  source-code.service.spec.ts  source-code.service.ts
src/app/editor/code-editor/editor-container/: editor-container.component.spec.ts  editor-container.component.ts
src/app/editor/code/editor-container/: editor-container.component.css  editor-container.component.html  editor-container.component.spec.ts  editor-container.component.ts
src/app/editor/editor/: editor.component.ts
src/app/editor/exports/: stackblitz.angular.service.ts  stackblitz.service.ts
src/app/editor/exports/stackblitz/: stackblitz.angular.service.spec.ts  stackblitz.react.service.ts  stackblitz.service.ts  stackblitz.stencil.service.spec.ts  stackblitz.stencil.service.ts  stackblitz.vue.service.spec.ts  stackblitz.vue.service.ts  stackblitz.wc.service.ts
src/app/editor/layer-settings/: BUILD.bazel  layer-settings.module.spec.ts  layer-settings.module.ts
src/app/editor/layer-settings/settings-container/: settings-container.component.spec.ts  settings-container.component.ts
src/app/editor/layer-settings/settings-layer-colors/: settings-layer-colors.component.spec.ts  settings-layer-colors.component.ts
src/app/editor/layer-settings/settings-layer-position/: settings-layer-position.component.spec.ts  settings-layer-position.component.ts
src/app/editor/layer-settings/settings-layer-properties/: settings-layer-properties.component.ts  (+1 more)
src/app/editor/preview/: preview.component.css  preview.component.html  preview.component.spec.ts  preview.component.ts  preview.module.ts
src/app/editor/tree-view/: tree-view.component.spec.ts  tree-view.component.ts
src/app/editor/viewer/: BUILD.bazel  viewer.module.spec.ts
src/app/home/: BUILD.bazel  home.module.spec.ts  home.module.ts
src/app/home/interactive-bg/: interactive-bg.component.css  interactive-bg.component.html  interactive-bg.component.spec.ts  interactive-bg.component.ts
src/app/home/landing/: landing.component.css  landing.component.html  landing.component.spec.ts  landing.component.ts
src/app/layer-settings/: layer-settings.module.ts
src/app/layer-settings/settings-container/: settings-container.component.ts
src/app/layer-settings/settings-layer/: settings-layer.component.spec.ts  settings-layer.component.ts
src/app/layer-settings/settings-layer-colors/: settings-layer-colors.component.spec.ts  settings-layer-colors.component.ts
src/app/layer-settings/settings-layer-position/: settings-layer-position.component.spec.ts  settings-layer-position.component.ts
src/app/layer-settings/settings-layer-properties/: settings-layer-properties.component.spec.ts  settings-layer-properties.component.ts
src/app/state/: ui.state.ts
src/app/tree-view/: tree-view.component.ts
src/app/upload/: upload.component.css  upload.component.html  upload.component.spec.ts  upload.component.ts
src/app/upload/browse-files/: browse-files.component.css  browse-files.component.html  browse-files.component.spec.ts  browse-files.component.ts
src/app/upload/dropzone/: dropzone.component.css  dropzone.component.html  dropzone.component.spec.ts
src/app/upload/select-demo-files/: select-demo-files.component.css  select-demo-files.component.html  select-demo-files.component.spec.ts
src/app/viewer/lib/: selected-layer.directive.ts  sketch-canvas.component.ts  sketch-container.component.ts  sketch-dropzone.component.ts  sketch-layer.component.ts  sketch-page.component.ts  sketch-tooltip.directive.ts  sketch.module.ts  sketch.service.ts
src/assets/contributions/Centigrade-GmbH/: LICENSE
src/assets/demos/sketchapp/: md-components-buttons-fabs-light.sketch  md-components-buttons-lights.sketch  md-components-cards-homes.sketch  md-components-cards-pooch.sketch  md-components-cards-safari.sketch  md-components-cards-welcome-back.sketch  md-components-chips-open-chip.sketch  md-components-date-picker.sketch  md-components-keyboards.sketch  md-components-notifications-heads-up.sketch  md-components-tabs-status-bar.sketch
src/assets/i18n/: en.json  nl.json
src/environments/: BUILD.bazel  environment.hmr.ts  environment.prod.ts  environment.ts
src/home/: home.module.ts
src/home/interactive-bg/: interactive-bg.component.css  interactive-bg.component.html  interactive-bg.component.spec.ts  interactive-bg.component.ts
src/home/landing/: landing.component.css  landing.component.html  landing.component.spec.ts  landing.component.ts
(+1039 files in other folders)
