package(default_visibility = ["//visibility:public"])

load("@angular//:index.bzl", "ng_module")
load("@io_bazel_rules_sass//sass:sass.bzl", "sass_binary")
load("@build_bazel_rules_typescript//:defs.bzl", "ts_library", "ts_web_test_suite")

ng_module(
    name = "editor",
    srcs = [
        "tree-view/tree-view.component.ts",
        "editor.component.ts",
        "editor.module.ts",
    ],
    assets = [
        ":editor.component.html",
        ":editor.component.css",
    ],
    deps = [
        "//src/app/core",
        "//src/app/editor/code-editor",
        "//src/app/editor/layer-settings",
        "//src/app/editor/viewer",
    ],
)

ts_library(
    name = "test_lib",
    testonly = 1,
    srcs = glob(["*.spec.ts", "tree-view/tree-view.component.spec.ts",]),
    deps = [
        ":editor",
        "@angular//packages/core",
        "@angular//packages/core/testing",
        "@angular//packages/platform-browser",
        "@angular//packages/platform-browser-dynamic/testing",
    ],
)

ts_web_test_suite(
    name = "test",
    srcs = ["//:node_modules/tslib/tslib.js"],
    # do not sort
    bootstrap = [
        "//:node_modules/zone.js/dist/zone-testing-bundle.js",
        "//:node_modules/reflect-metadata/Reflect.js",
    ],
    browsers = [
        "@io_bazel_rules_webtesting//browsers:chromium-local",
    ],
    deps = [
        ":test_lib",
    ],
)